--- a/Designers.html
+++ b/Designers.html
@@ -22,7 +22,7 @@
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="Dream.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="Products.html">Products</a></li>
                         <li><a href="Designers.html">Design</a></li>
                         <li><a href="Labours.html">Labours</a></li>
